--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "description": "Bot de l'endroit planqué",
     "main": "bot.js",
     "author": "bobvince",
+    "scripts": {
+        "start": "node bot.js"
+    },
     "dependencies": {
         "discord.js": "^11.3.2"
     }
